--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
             <h1>Login</h1>
-            <form action="home.html">
+            <form action="index.html">
             <label for="email">E-mail</label>
             <input type="email" name="email" id="email" placeholder="Digíte seu e-mail">
             <label for="password"> Senha </label>
