--- a/sobre.html
+++ b/sobre.html
@@ -58,7 +58,7 @@
                 <span data-width="40%"></span>  
             </div>
         </div>
-        <a href="home.html">Voltar</a>
+        <a href="index.html">Voltar</a>
     </div>
     <script src="js/main.js"></script> 
 </body>
